# ortet_mark_one

./: .gitignore  Cargo.toml  README.md
.cargo/: config
electronics/: electronics.kicad_pcb  electronics.kicad_prl  electronics.kicad_pro  electronics.kicad_sch
src/: main.rs
