[package]
name = "ortet_mark_one"
authors = ["Alec Deason"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
adc-mcp3008 = {git = "https://github.com/alec-deason/adc-mcp3008" }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
embedded-midi = "0.1.2"
embedded-time = "0.12.1"
fugit = "0.3.6"
panic-halt = "0.2.0"
rp-pico = "0.5.0"
rp2040-hal = "0.6.0"
usb-device = "0.2.9"
usbd-midi = { git = "https://github.com/btrepp/usbd-midi.git"}
